# bruno-core

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  PHASE8_COMPLETION.md  PROJECT_COMPLETE.md  README.md  current_task.md  current_task_plan.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
architecture/: index.html
bruno_core/: __init__.py  __version__.py
bruno_core/base/: __init__.py  ability.py  assistant.py  chain.py  executor.py
bruno_core/context/: __init__.py  manager.py  session.py  state.py
bruno_core/events/: __init__.py  bus.py  handlers.py  types.py
bruno_core/interfaces/: __init__.py  ability.py  assistant.py  embedding.py  llm.py  memory.py  stream.py
bruno_core/models/: __init__.py  ability.py  config.py  context.py  memory.py  message.py  response.py
bruno_core/protocols/: __init__.py  interfaces.py
bruno_core/registry/: __init__.py  ability_registry.py  base.py  llm_registry.py  memory_registry.py
bruno_core/utils/: __init__.py  async_utils.py  config.py  exceptions.py  logging.py  text_processing.py  validation.py
docs/: architecture.md  index.md  project_overview.md  quickstart.md
docs/guides/: creating_abilities.md  custom_llm.md  memory_backends.md
examples/: README.md  basic_assistant.py  custom_ability.py  custom_llm.py  event_handling.py  memory_usage.py
guides/creating_abilities/: index.html
guides/custom_llm/: index.html
guides/memory_backends/: index.html
old_code/: __init__.py
old_code/abilities/: __init__.py  alarm.py  alarm_manager.py  command_processor.py  conversation_ability.py  media_library.py  music_manager.py  music_player.py  notes_manager.py  timer.py  timer_manager.py
old_code/audio/: __init__.py  windows_audio.py
old_code/commands/: __init__.py  faster_whisper_listener.py  listener.py
old_code/core/: __init__.py  action_executor.py  base_assistant.py  bruno_interface.py  bruno_setup.py  discord_assistant.py  voice_assistant.py
old_code/integrations/: __init__.py  discord_adapter.py  discord_bot.py  discord_bot_cpu.py  discord_commands.py  discord_embeds.py
old_code/llm/: __init__.py  base.py  claude_client.py  factory.py  ollama_client.py  openai_client.py
old_code/memory/: __init__.py  background_jobs.py  context_compressor.py  conversation_manager.py  ltm_worker.py  memory_cache.py  memory_retriever.py  memory_store.py
old_code/speech/: __init__.py  transcription.py
old_code/tts/: __init__.py  engine.py  piper_tts.py  windows_tts.py
old_code/utils/: __init__.py  config.py  permissions.py
old_code/wake_word/: __init__.py  vosk_detector.py
project_overview/: index.html
quickstart/: index.html
scripts/: check_release.py  release.py  setup_dev.py
search/: search_index.json
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_full_flow.py
tests/unit/: test_base_assistant.py  test_context.py  test_events.py  test_executor.py  test_models.py  test_registry.py
